--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hello forms</title>
 </head>
 <body>
-    <h1>Heloo word</h1>
+    <h1>HELLO FORM !</h1>
+    <input placeholder="enter your  email" type="email"> <br><br>
+    <input maxlength="12" placeholder="enter your password " type="password"><br><br>
+    <input maxlength= "3" placeholder="enter your Age" type="number"><br><br>
+    <input maxlength="9" placeholder="Cantact" type="number"> <br> <br>
+     <input type="radio" name="male"><label for="Male">Male <input type="radio" name="female" id="" >Female<br><br>
+        <input type="radio" name=""><label for="">Custom <br><br>
+    <textarea placeholder="enter your current address" cols="30" rows="10"></textarea><br><br>
+    <textarea placeholder="BIO" cols="30" rows="10"></textarea>
+
+
+    <br><br>    
+    <button>Submit</button>
+
+    
 </body>
 </html>
