--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>HELLO FORM !</h1>
+    <h1>HELLO FORM !</h1>
     <input placeholder="enter your  email" type="email"> <br><br>
     <input maxlength="12" placeholder="enter your password " type="password"><br><br>
     <input maxlength= "3" placeholder="enter your Age" type="number"><br><br>
